--- a/question/001 - 为什么处理一段已排序的数组比处理一段未排序的数组快.md
+++ b/question/001 - 为什么处理一段已排序的数组比处理一段未排序的数组快.md
@@ -135,6 +135,7 @@ sum += ~t & data[c];
 
 这样就没分支预测了（两个语句做的事情其实是等同的，就是用位运算来替换 if 语句而已）。
 
+测试环境：**Core i7 920 @ 3.5 GHz**
 
 C++ - Visual Studio 2010 - x64 Release
 
