修改部分内容

--- a/question/002 - 这个操作符在 C++ 中是什么意思.md
+++ b/question/002 - 这个操作符在 C++ 中是什么意思.md
@@ -22,7 +22,7 @@ int main()
 
 `-->`不是一个操作符（operator），实际上是两个操作符（operator）合在一起了，即`--`和`>`。
 
-在上面那段代码中，因为`--`是后自减，所以执行的顺序就是：先`x > 0`，然后`x--`。
+在上面那段代码中，因为`--`是**后自减**，所以执行的顺序就是：先`x > 0`，然后`x--`。
 
 说白了，上面的代码就等同于，
 
