--- a/question/003 - C++ 图书指南.md
+++ b/question/003 - C++ 图书指南.md
@@ -62,6 +62,7 @@
 - [**C++ 程序设计语言**](https://item.jd.com/11986384.html) （Bjarne Stroustrup，更新了 C++11 内容）C++ 之父撰写的经典教程书，与经典 K&R 读起来相似，涵盖了从语言核心到标准库，从编程范例到语言哲学的所有内容。[[评价]](https://accu.org/bookreviews/2014/lenton_1853) 
   - 注：这个问题 *[Where do I find the current C or C++ standard documents?](https://stackoverflow.com/questions/81656/where-do-i-find-the-current-c-or-c-standard-documents)* 收集了 C++ 的所有发布标准。
 - [**C++ 标准库 —— 自学教程与参考手册**](https://item.jd.com/11151402.html) （Nicolai Josuttis，更新了 C++11 内容）提供了 C++ 标准库的介绍和参考，第二版（在 2012.4.9 发行）包含了 C++11。[[评价]](https://accu.org/bookreviews/2012/glassborow_1849) 
+  > [中文版](https://item.jd.com/13130374.html)
 - [**The C++ IO Streams and Locales**](https://rads.stackoverflow.com/amzn/click/com/0201183951) （Angelika Langer and Klaus Kreft）关于这本书几乎没什么需要说的，如果你想了解关于 `stream` 和 `locale` 的任何内容，那么这是个找到标准答案的地方。[[评价]](https://accu.org/bookreviews/2000/glassborow_200) 
 
 ##### C++ 11/14/17/... 参考：
@@ -80,7 +81,7 @@
 > 注意：这些书中包含的某些信息可能已经过时或不再被视为最佳实践。
 
 - [**C++ 语言的设计和演化**](https://e.jd.com/30668069.html?ebook=1) （Bjarne Stroustrup）你可以在这本书里找到为什么 C++ 会这么设计，它涵盖了 C++ 在标准化之前的所有内容。
-- [**C++ 沉思录 **](https://item.jd.com/12994578.html) （Andrew Koenig and Barbara Moo）[[评价]](https://accu.org/bookreviews/1997/glassborow_776) 
+- [**C++ 沉思录**](https://item.jd.com/12994578.html) （Andrew Koenig and Barbara Moo）[[评价]](https://accu.org/bookreviews/1997/glassborow_776) 
 - [**Advanced C++ Programming Styles and Idioms**](https://rads.stackoverflow.com/amzn/click/com/0201548550) （James Coplien）`pattern movement` 的前身，它描述了许多 C++ 特有的“编程习惯”。如果你有空闲的话，这当然是一本非常值得一读的书，但它已经很久没有和更新的 C++ 标准适配了。
 - [**大规模 C++ 程序设计**](https://item.jd.com/11567576.html) （John Lakos）Lakos 在这本书里描述了如何大型 C++ 软件项目。如果它更新了的话，当然会是一本好书。但它是在 C++98 之前编写的，并且错过了对大型项目很重要的如 `namespace` 的许多功能。如果你需要参与大型 C++ 软件项目，就很需要阅读这本要花费很多精力的书。[新版本的第一卷](https://www.amazon.com/dp/0201717069) 在 2019 年发行。
 - [**深度探索C++对象模型**](https://e.jd.com/30652216.html?ebook=1) （Stanley Lippman）如果你想知道通常在多继承方案中如何实现虚函数以及基础对象是如何被布置在内存中的，以及所有这些内容对性能的影响，那么你可以在这本书中找到这些主题相关的详尽的讨论。
