--- a/question/014 - 什么是三法则.md
+++ b/question/014 - 什么是三法则.md
@@ -153,7 +153,8 @@ person& operator=(const person& that)
 
 #### 异常安全
 
-然而，在因为内存耗尽`new char[...]`抛出异常的时候，赋值运算符就无法保持 [强异常安全保证](https://en.wikipedia.org/wiki/Exception_safety)。可以利用一个局部变量来解决这个问题，
+然而，在因为内存耗尽`new char[...]`抛出异常的时候，赋值运算符就无法保持 [强异常安全保证](https://en.wikipedia.org/wiki/Exception_safety)。  
+**可以利用一个局部变量来解决这个问题**，
 
 ```c++
 // 2. copy assignment operator
